--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
 plotly>=5.17.0
-pandas>=2.0.0,<2.3.0
-numpy>=1.26.0,<3.0.0
-yfinance>=0.2.18
-requests>=2.31.0
-
+yfinance>=0.2.28
+ta>=0.11.0
